--- a/web/src/jsMain/resources/index.html
+++ b/web/src/jsMain/resources/index.html
@@ -5,7 +5,7 @@
     <title>JS Client</title>
 </head>
 <body>
-<script src="browser.js"></script>
 <div id="root"></div>
+<script src="web.js"></script>
 </body>
 </html>
